# edge-egress-http

./: .gitignore  Cargo.toml  README.md  audit_output.txt  check_errors.txt  check_errors2.txt  check_errors3.txt  check_errors4.txt  check_errors5.txt  check_errors6.txt  check_errors7.txt
auth/: Cargo.toml
auth/config/: application.toml
auth/src/: lib.rs
auth/src/api/: auth_strategy.rs  builder.rs  credential.rs  credential_resolver.rs  credential_source.rs  error.rs  http_auth.rs  strategy.rs  traits.rs
auth/src/core/: mod.rs
auth/src/saf/: mod.rs
auth/tests/: auth_config_int_test.rs  auth_middleware_int_test.rs  aws_sigv4_strategy_int_test.rs  basic_strategy_int_test.rs  bearer_strategy_int_test.rs  builder_int_test.rs  credential_resolver_int_test.rs  default_http_auth_int_test.rs  header_strategy_int_test.rs  http_auth_int_test.rs  noop_strategy_int_test.rs  traits_int_test.rs
breaker/: Cargo.toml
breaker/config/: application.toml
breaker/docs/: README.md
breaker/src/api/: breaker_layer.rs  builder.rs  error.rs  host_breaker.rs  http_breaker.rs  traits.rs
breaker/src/core/: breaker_layer.rs  mod.rs
breaker/tests/: breaker_layer_int_test.rs  builder_e2e_test.rs  builder_int_test.rs  default_http_breaker_int_test.rs  gateway_int_test.rs  http_breaker_int_test.rs
cassette/: Cargo.toml
cassette/docs/: README.md
cassette/examples/: cassette.rs
cassette/src/: lib.rs
cassette/src/api/: builder.rs  cassette_config.rs  cassette_layer.rs  http_cassette.rs  mod.rs  recorded_interaction.rs
cassette/src/core/: body_scrubber.rs  default_http_cassette.rs  mod.rs  recorded_interaction.rs
cassette/src/saf/: mod.rs
cassette/tests/: body_scrubber_int_test.rs  builder_int_test.rs  cassette_config_int_test.rs  cassette_layer_int_test.rs  core_cassette_layer_int_test.rs  traits_int_test.rs
main/features/auth/: Cargo.toml  README.md
main/features/breaker/: Cargo.toml
main/features/cache/: Cargo.toml
main/features/cassette/: Cargo.toml
main/features/oauth/: Cargo.toml  README.md
main/features/retry/: Cargo.toml
main/features/tls/: Cargo.toml  README.md
main/features/transport/: Cargo.toml  README.md
main/rate/: Cargo.toml
main/rate/config/: application.toml
main/rate/docs/: README.md
main/rate/tests/: builder_int_test.rs  processor_int_test.rs  rate_svc_int_test.rs  validator_int_test.rs
retry/: Cargo.toml  README.md
retry/config/: application.toml
retry/examples/: retry.rs
retry/src/: lib.rs
retry/src/api/: default_http_retry.rs  mod.rs  retry_config.rs  retry_layer.rs
retry/src/saf/: mod.rs
retry/tests/: builder_int_test.rs  core_retry_layer_int_test.rs  default_http_retry_int_test.rs  http_retry_int_test.rs  retry_layer_int_test.rs
scm/: Cargo.toml  bootstrap.ps1  bootstrap.sh
scm/auth/: Cargo.toml
scm/auth/docs/: README.md
scm/auth/tests/: auth_strategy_int_test.rs  auth_strategy_svc_int_test.rs  aws_strategy_svc_int_test.rs  basic_strategy_int_test.rs  basic_strategy_svc_int_test.rs  bearer_strategy_svc_int_test.rs  builder_int_test.rs  coverage_int_test.rs  credential_resolver_svc_int_test.rs  env_credential_resolver_svc_int_test.rs  header_strategy_svc_int_test.rs  helper_svc_int_test.rs  http_auth_svc_int_test.rs  percent_encoding_dep_int_test.rs  processor_int_test.rs  strategy_factory_svc_int_test.rs  strategy_marker_int_test.rs  strategy_svc_int_test.rs  validator_int_test.rs
scm/breaker/: Cargo.toml
scm/breaker/tests/: breaker_config_int_test.rs  breaker_error_int_test.rs  breaker_loadbalancer_int_test.rs  breaker_metrics_int_test.rs  breaker_metrics_svc_int_test.rs  breaker_svc_int_test.rs  circuit_breaker_node_svc_int_test.rs  coverage_int_test.rs  error_int_test.rs  host_breaker_int_test.rs  host_breaker_svc_int_test.rs  http_breaker_svc_int_test.rs  outcome_int_test.rs  state_svc_int_test.rs
scm/cache/: Cargo.toml  README.md
scm/cache/tests/: cache_entry_helper_svc_int_test.rs  cache_svc_int_test.rs  cached_entry_builder_int_test.rs  cached_entry_int_test.rs  coverage_int_test.rs  http_cache_svc_int_test.rs  processor_svc_int_test.rs  request_snapshot_svc_int_test.rs  ttl_decision_svc_int_test.rs  vary_directive_svc_int_test.rs
scm/cassette/: Cargo.toml
scm/cassette/config/: application.toml
scm/cassette/tests/: application_config_builder_int_test.rs  core_cassette_layer_int_test.rs  coverage_int_test.rs  http_cassette_svc_int_test.rs  interaction_svc_int_test.rs  request_svc_int_test.rs  reqwest_dep_int_test.rs  response_svc_int_test.rs  saf_builder_int_test.rs  scrubber_svc_int_test.rs  validator_int_test.rs
scm/docs/: README.md  architecture.md
scm/docs/adr/: ADR-001-egress-security-specialisations.md  ADR-002-security-context-propagation.md
scm/loadbalancer/: Cargo.toml  README.md
scm/loadbalancer/config/: application.toml
scm/loadbalancer/docs/: README.md
scm/loadbalancer/examples/: loadbalancer.rs
scm/loadbalancer/tests/: application_config_builder_int_test.rs  coverage_int_test.rs  loadbalancer_config_int_test.rs  loadbalancer_dep_int_test.rs  loadbalancer_layer_int_test.rs  loadbalancer_middleware_error_int_test.rs  loadbalancer_svc_int_test.rs  processor_int_test.rs  validator_int_test.rs
scm/oauth/: Cargo.toml
scm/oauth/tests/: application_config_builder_int_test.rs  cached_token_svc_int_test.rs  configbuilder_dep_int_test.rs  coverage_int_test.rs  o_auth_builder_ops_int_test.rs  o_auth_builder_ops_svc_int_test.rs  o_auth_builder_types_int_test.rs  o_auth_error_int_test.rs  o_auth_middleware_int_test.rs  o_auth_provider_int_test.rs  o_auth_result_int_test.rs  o_auth_strategy_svc_int_test.rs  o_auth_token_source_svc_int_test.rs  refresh_strategy_trait_int_test.rs  time_helper_int_test.rs  time_helper_svc_int_test.rs
scm/rate/: Cargo.toml  README.md
scm/rate/tests/: bucket_svc_int_test.rs  coverage_int_test.rs  http_rate_svc_int_test.rs  rate_bucket_ops_svc_int_test.rs  traits_int_test.rs  validator_svc_int_test.rs
scm/retry/: .gitignore  Cargo.toml
scm/retry/config/: application.toml
scm/tls/: Cargo.toml
scm/transport/: .gitignore  Cargo.toml
(+1956 files in other folders)
