[package]
name = "swe-edge-egress-retry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Opinionated retry middleware (wraps reqwest-retry with SWE defaults)"
keywords = ["http", "retry", "reqwest", "middleware", "swe"]
categories = ["web-programming::http-client"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
# `reqwest-retry` kept as a workspace dep but not used directly
# here — our middleware honors per-method retry policy, which
# reqwest-retry's RetryableStrategy trait doesn't expose a hook
# for. The `reqwest-retry` crate is still a fine choice for
# consumers that don't need method-level filtering.
# reqwest-retry = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["time"] }
# `from_config` loads policy from TOML. `serde` derives the
# schema; `toml` parses it. Policy values live in
# `config/application.toml` + consumer overrides — never as
# hardcoded literals in source.
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = []
# Emit spans via the `tracing` crate. Off by default so consumers
# without tracing infrastructure don't pay the cost.
tracing = ["dep:tracing"]
