[package]
name = "swe-edge-egress-rate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Client-side rate-limiter middleware — token bucket per host"
keywords = ["http", "rate", "reqwest", "middleware", "swe"]
categories = ["web-programming::http-client"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
# `from_config` loads policy from TOML. `serde` derives the
# schema; `toml` parses it. Policy values live in
# `config/default.toml` + consumer overrides — never as hardcoded
# literals in source.
serde = { workspace = true }
toml = { workspace = true }
swe-edge-configbuilder.workspace = true
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
moka = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
moka = { workspace = true }
swe-edge-configbuilder = { workspace = true }

[features]
default = []
# Emit spans via the `tracing` crate. Off by default so consumers
# without tracing infrastructure don't pay the cost.
tracing = ["dep:tracing"]


[[test]]
name = "builder_e2e_test"
path = "tests/builder_e2e_test.rs"

[[test]]
name = "builder_int_test"
path = "tests/builder_int_test.rs"

[[test]]
name = "core_rate_layer_int_test"
path = "tests/core_rate_layer_int_test.rs"

[[test]]
name = "default_http_rate_int_test"
path = "tests/default_http_rate_int_test.rs"

[[test]]
name = "error_int_test"
path = "tests/error_int_test.rs"

[[test]]
name = "gateway_int_test"
path = "tests/gateway_int_test.rs"

[[test]]
name = "http_rate_int_test"
path = "tests/http_rate_int_test.rs"

[[test]]
name = "rate_config_int_test"
path = "tests/rate_config_int_test.rs"

[[test]]
name = "rate_layer_int_test"
path = "tests/rate_layer_int_test.rs"

[[test]]
name = "token_bucket_int_test"
path = "tests/token_bucket_int_test.rs"

[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"

[[test]]
name = "rate_svc_int_test"
path = "tests/rate_svc_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "rate_bucket_ops_int_test"
path = "tests/rate_bucket_ops_int_test.rs"

[[test]]
name = "rate_error_int_test"
path = "tests/rate_error_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"
[[test]]
name = "http_rate_svc_int_test"
path = "tests/http_rate_svc_int_test.rs"

[[test]]
name = "moka_dep_int_test"
path = "tests/moka_dep_int_test.rs"

[[test]]
name = "configbuilder_dep_int_test"
path = "tests/configbuilder_dep_int_test.rs"
