[package]
name = "swe-edge-egress-breaker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Circuit-breaker middleware — fail fast on degraded upstreams"
keywords = ["http", "breaker", "reqwest", "middleware", "swe"]
categories = ["web-programming::http-client"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "main/src/lib.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
# `from_config` loads policy from TOML. `serde` derives the
# schema; `toml` parses it. Policy values live in
# `config/default.toml` + consumer overrides — never as hardcoded
# literals in source.
serde = { workspace = true }
toml = { workspace = true }
swe-edge-configbuilder.workspace = true
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
moka = { workspace = true }
anyhow = { workspace = true }
tracing             = { workspace = true, optional = true }
swe-edge-loadbalancer = { workspace = true, optional = true }

[dev-dependencies]
reqwest             = { workspace = true }
reqwest-middleware  = { workspace = true }
async-trait         = { workspace = true }
tokio               = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
moka                = { workspace = true }
swe-edge-configbuilder = { workspace = true }
swe-edge-loadbalancer  = { workspace = true }
bytes               = { workspace = true }
hyper               = { version = "1", features = ["http1", "server"] }
hyper-util          = { version = "0.1", features = ["tokio"] }
http-body-util      = "0.1"

[features]
default = []
# Emit spans via the `tracing` crate. Off by default so consumers
# without tracing infrastructure don't pay the cost.
tracing = ["dep:tracing"]
# Wire circuit-trip events back to a `swe-edge-loadbalancer` BackendPool so
# tripped backends are removed from rotation.
loadbalancer = ["dep:swe-edge-loadbalancer"]


[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
