[package]
name         = "swe-edge-egress-http-transport"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "edge — egress HTTP outbound domain: request/response types, outbound trait, and default reqwest-backed implementation."
keywords     = ["gateway", "egress", "http", "sea", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "transport"

[lib]
path = "main/src/lib.rs"

# Each egress middleware is an opt-in cargo feature (ADR-006 Phase 2c). `default`
# enables all of them, so the out-of-the-box experience is unchanged; size-conscious
# consumers use `default-features = false` and enable only what they need.
[features]
default = ["auth", "oauth", "tls", "retry", "rate", "breaker", "cache", "cassette"]
auth     = ["dep:swe-edge-egress-auth"]
oauth    = ["dep:swe-edge-egress-oauth"]
tls      = ["dep:swe-edge-egress-tls"]
retry    = ["dep:swe-edge-egress-retry"]
rate     = ["dep:swe-edge-egress-rate"]
breaker  = ["dep:swe-edge-egress-breaker"]
cache    = ["dep:swe-edge-egress-cache"]
cassette = ["dep:swe-edge-egress-cassette"]
websocket = ["dep:tokio-tungstenite"]

[dependencies]
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
futures.workspace           = true
http.workspace              = true
tokio                       = { workspace = true, features = ["rt", "net"] }
reqwest.workspace           = true
reqwest-middleware.workspace = true
swe-edge-egress-auth     = { workspace = true, optional = true }
swe-edge-egress-retry    = { workspace = true, optional = true }
swe-edge-egress-rate     = { workspace = true, optional = true }
swe-edge-egress-breaker  = { workspace = true, optional = true }
swe-edge-egress-cache    = { workspace = true, optional = true }
swe-edge-egress-cassette = { workspace = true, optional = true }
swe-edge-egress-tls      = { workspace = true, optional = true }
swe-edge-egress-oauth    = { workspace = true, optional = true }
bytes.workspace                    = true
swe-observ-metrics.workspace       = true
tokio-tungstenite      = { version = "0.26", optional = true, features = ["rustls-tls-native-roots"] }
swe-edge-configbuilder = { workspace = true }

# Integration tests live in tests/*.rs and are auto-discovered by Cargo — one
# test target per file, named after the file stem. No explicit [[test]] entries
# are needed (and listing them risks silently omitting newly-added test files).

[dev-dependencies]
tokio               = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
hyper               = { version = "1", features = ["http1", "server"] }
hyper-util          = { version = "0.1", features = ["tokio"] }
http-body-util      = "0.1"
bytes               = "1"
serde_json          = { workspace = true }
http                    = { workspace = true }
reqwest-middleware      = { workspace = true }
swe-edge-egress-tls     = { workspace = true }
swe-edge-egress-auth    = { workspace = true }
swe-edge-egress-retry   = { workspace = true }
swe-edge-egress-rate    = { workspace = true }
swe-edge-egress-breaker = { workspace = true }
swe-edge-egress-cache   = { workspace = true }
swe-edge-egress-cassette = { workspace = true }
swe-edge-egress-oauth    = { workspace = true }
futures                  = { workspace = true }
tokio-tungstenite        = { version = "0.26", features = ["rustls-tls-native-roots"] }
tempfile                 = "3"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
