[package]
name = "swe-edge-egress-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP auth middleware for reqwest-middleware — attaches Authorization (Bearer/Basic) or custom credential headers to outbound requests. Config-driven; credentials resolved from env vars, never stored in TOML."
keywords = ["http", "auth", "bearer", "reqwest", "middleware"]
categories = ["web-programming::http-client", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
# `from_config` loads policy from TOML. Credentials themselves
# are referenced by env-var NAME in config — never stored as
# plaintext in the TOML itself.
serde = { workspace = true }
toml = { workspace = true }
# Secret-String wrapper — blocks accidental Debug/Display of
# credential bytes.
secrecy = { workspace = true }
# Base64 encoding for the Basic scheme.
base64 = { workspace = true }
# Crypto primitives — SigV4 (sha2 + hmac). Shared:
# hex for lower-hex encoding of hash/MAC outputs.
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
# SigV4 requires UTC timestamps in ISO 8601 basic format.
time = { workspace = true }
# SigV4 canonical-request percent-encodes URI path + query.
percent-encoding = { workspace = true }
parking_lot = { workspace = true }
swe-edge-configbuilder.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = []
tracing = ["dep:tracing"]


[[test]]
name = "auth_config_int_test"
path = "test/auth_config_int_test.rs"

[[test]]
name = "auth_middleware_int_test"
path = "test/auth_middleware_int_test.rs"

[[test]]
name = "auth_strategy_int_test"
path = "test/auth_strategy_int_test.rs"

[[test]]
name = "aws_sigv4_strategy_int_test"
path = "test/aws_sigv4_strategy_int_test.rs"

[[test]]
name = "basic_strategy_int_test"
path = "test/basic_strategy_int_test.rs"

[[test]]
name = "bearer_strategy_int_test"
path = "test/bearer_strategy_int_test.rs"

[[test]]
name = "builder_e2e_test"
path = "test/builder_e2e_test.rs"

[[test]]
name = "builder_int_test"
path = "test/builder_int_test.rs"

[[test]]
name = "credential_resolver_int_test"
path = "test/credential_resolver_int_test.rs"

[[test]]
name = "credential_source_int_test"
path = "test/credential_source_int_test.rs"

[[test]]
name = "default_http_auth_int_test"
path = "test/default_http_auth_int_test.rs"

[[test]]
name = "env_credential_resolver_int_test"
path = "test/env_credential_resolver_int_test.rs"

[[test]]
name = "error_int_test"
path = "test/error_int_test.rs"

[[test]]
name = "gateway_int_test"
path = "test/gateway_int_test.rs"

[[test]]
name = "header_strategy_int_test"
path = "test/header_strategy_int_test.rs"

[[test]]
name = "http_auth_int_test"
path = "test/http_auth_int_test.rs"

[[test]]
name = "noop_strategy_int_test"
path = "test/noop_strategy_int_test.rs"

[[test]]
name = "strategy_factory_int_test"
path = "test/strategy_factory_int_test.rs"

[[test]]
name = "traits_int_test"
path = "test/traits_int_test.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
