[package]
name = "swe-edge-egress-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP auth middleware for reqwest-middleware — attaches Authorization (Bearer/Basic) or custom credential headers to outbound requests. Config-driven; credentials resolved from env vars, never stored in TOML."
keywords = ["http", "auth", "bearer", "reqwest", "middleware"]
categories = ["web-programming::http-client", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
# `from_config` loads policy from TOML. Credentials themselves
# are referenced by env-var NAME in config — never stored as
# plaintext in the TOML itself.
serde = { workspace = true }
toml = { workspace = true }
# Secret-String wrapper — blocks accidental Debug/Display of
# credential bytes.
secrecy = { workspace = true }
# Base64 encoding for the Basic scheme.
base64 = { workspace = true }
# Crypto primitives — SigV4 (sha2 + hmac). Shared:
# hex for lower-hex encoding of hash/MAC outputs.
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
# SigV4 requires UTC timestamps in ISO 8601 basic format.
time = { workspace = true }
# SigV4 canonical-request percent-encodes URI path + query.
percent-encoding = { workspace = true }
swe-edge-configbuilder.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = []
tracing = ["dep:tracing"]


[[test]]
name = "auth_config_int_test"
path = "tests/auth_config_int_test.rs"

[[test]]
name = "auth_middleware_int_test"
path = "tests/auth_middleware_int_test.rs"

[[test]]
name = "auth_strategy_int_test"
path = "tests/auth_strategy_int_test.rs"

[[test]]
name = "aws_sigv4_strategy_int_test"
path = "tests/aws_sigv4_strategy_int_test.rs"

[[test]]
name = "basic_strategy_int_test"
path = "tests/basic_strategy_int_test.rs"

[[test]]
name = "bearer_strategy_int_test"
path = "tests/bearer_strategy_int_test.rs"

[[test]]
name = "builder_e2e_test"
path = "tests/builder_e2e_test.rs"

[[test]]
name = "builder_int_test"
path = "tests/builder_int_test.rs"

[[test]]
name = "credential_resolver_int_test"
path = "tests/credential_resolver_int_test.rs"

[[test]]
name = "credential_source_int_test"
path = "tests/credential_source_int_test.rs"

[[test]]
name = "default_http_auth_int_test"
path = "tests/default_http_auth_int_test.rs"

[[test]]
name = "env_credential_resolver_int_test"
path = "tests/env_credential_resolver_int_test.rs"

[[test]]
name = "error_int_test"
path = "tests/error_int_test.rs"

[[test]]
name = "gateway_int_test"
path = "tests/gateway_int_test.rs"

[[test]]
name = "header_strategy_int_test"
path = "tests/header_strategy_int_test.rs"

[[test]]
name = "http_auth_int_test"
path = "tests/http_auth_int_test.rs"

[[test]]
name = "noop_strategy_int_test"
path = "tests/noop_strategy_int_test.rs"

[[test]]
name = "strategy_factory_int_test"
path = "tests/strategy_factory_int_test.rs"

[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"

[[test]]
name = "auth_svc_int_test"
path = "tests/auth_svc_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "auth_error_int_test"
path = "tests/auth_error_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"

[[test]]
name = "hmac_dep_int_test"
path = "tests/hmac_dep_int_test.rs"
