[package]
name = "swe-edge-egress-breaker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Circuit-breaker middleware — fail fast on degraded upstreams"
keywords = ["http", "breaker", "reqwest", "middleware", "swe"]
categories = ["web-programming::http-client"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
# `from_config` loads policy from TOML. `serde` derives the
# schema; `toml` parses it. Policy values live in
# `config/default.toml` + consumer overrides — never as hardcoded
# literals in source.
serde = { workspace = true }
toml = { workspace = true }
swe-edge-configbuilder.workspace = true
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
moka = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = []
# Emit spans via the `tracing` crate. Off by default so consumers
# without tracing infrastructure don't pay the cost.
tracing = ["dep:tracing"]

[lints]
workspace = true

[[test]]
name = "breaker_config_int_test"
path = "test/breaker_config_int_test.rs"

[[test]]
name = "breaker_layer_int_test"
path = "test/breaker_layer_int_test.rs"

[[test]]
name = "breaker_state_int_test"
path = "test/breaker_state_int_test.rs"

[[test]]
name = "builder_e2e_test"
path = "test/builder_e2e_test.rs"

[[test]]
name = "builder_int_test"
path = "test/builder_int_test.rs"

[[test]]
name = "core_breaker_layer_int_test"
path = "test/core_breaker_layer_int_test.rs"

[[test]]
name = "default_http_breaker_int_test"
path = "test/default_http_breaker_int_test.rs"

[[test]]
name = "error_int_test"
path = "test/error_int_test.rs"

[[test]]
name = "gateway_int_test"
path = "test/gateway_int_test.rs"

[[test]]
name = "host_breaker_int_test"
path = "test/host_breaker_int_test.rs"

[[test]]
name = "http_breaker_int_test"
path = "test/http_breaker_int_test.rs"

[[test]]
name = "traits_int_test"
path = "test/traits_int_test.rs"
